fixed footer css on small screens

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -215,6 +215,10 @@ li.nav-item.active{
   border-color: rgb(68, 71, 75)
 }
 
+.footerText {
+  text-align: center
+}
+
 
 .navbar-collapse.collapsing,
 .navbar-collapse.show {
